--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quill-image-resize",
-  "version": "3.0.9",
+  "name": "quill-image-resize-nyh",
+  "version": "3.0.10",
   "description": "A module for Quill rich text editor to allow images to be resized.",
   "main": "image-resize.min.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Etoile984816138/quill-image-resize-module.git"
+    "url": "git+https://github.com/yoonhona/quill-image-resize-module.git"
   },
   "keywords": [
     "quill",
@@ -24,15 +24,15 @@
   "author": "@kensnyder",
   "contributors": [
     {
-      "name": "Wikia",
-      "url": "https://github.com/Wikia"
+      "name": "nyh",
+      "url": "https://github.com/yoonhona"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Etoile984816138/quill-image-resize-module/issues"
+    "url": "https://github.com/yoonhona/quill-image-resize-module/pulls"
   },
-  "homepage": "https://github.com/Etoile984816138/quill-image-resize-module#readme",
+  "homepage": "https://github.com/yoonhona/quill-image-resize-module#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "quill": "^1.2.2",
+    "quill": "^1.3.6",
     "raw-loader": "^0.5.1"
   }
 }
