cleanup and remove inline styles

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill-image-resize-nyh",
+  "name": "quill-image-resize-mtn",
   "version": "3.0.10",
   "description": "A module for Quill rich text editor to allow images to be resized.",
   "main": "image-resize.min.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yoonhona/quill-image-resize-module.git"
+    "url": "git+https://github.com/martin-trajanovski/quill-image-resize-module.git"
   },
   "keywords": [
     "quill",
@@ -24,15 +24,15 @@
   "author": "@kensnyder",
   "contributors": [
     {
-      "name": "nyh",
-      "url": "https://github.com/yoonhona"
+      "name": "mtn",
+      "url": "https://github.com/martin-trajanovski"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yoonhona/quill-image-resize-module/pulls"
+    "url": "https://github.com/martin-trajanovski/quill-image-resize-module/pulls"
   },
-  "homepage": "https://github.com/yoonhona/quill-image-resize-module#readme",
+  "homepage": "https://github.com/martin-trajanovski/quill-image-resize-module#readme",
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.1",
